--- a/client/src/style.css
+++ b/client/src/style.css
@@ -5,31 +5,31 @@ h1, h5, h6 {
 .cards {
   display: flex;
   justify-content: space-between;
-  margin: 100px;
+  margin: 50px;
 }
 .card-one {
-  width: 200px;
-  height: 280px;
+  width: 250px;
+  height: 350px;
   display: flex;
   border-radius: 3px;
-  background-color: darkgray;
+  background-color: lightgray;
   padding: 25px;
   flex-direction: column;
 }
 
 .card-two {
-  width: 200px;
-  height: 280px;
+  width: 250px;
+  height: 350px;
   display: flex;
   border-radius: 3px;
-  background-color: darkgray;
+  background-color: lightgray;
   padding: 25px;
   flex-direction: column;
 }
 
 img {
   border-radius: 3px;
-  height: 150px;
+  height: 200px;
 }
 
 
